data/derived/sp14/progs/unify/prog3201.ml.out
Characters 172-187:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type (int * int list) * 'a list
       Type int list is not compatible with type int * int list 
